fixed logout problem where dom node status data is left behind, more UI cleanup

--- a/mobileapp/www/css/index.css
+++ b/mobileapp/www/css/index.css
@@ -229,7 +229,7 @@ input[type="password"]:focus {
 #page-title {
     display: block;
     text-align: center;
-    font-size: 24px;
+    font-size: 16px;
 }
 
 #header {
